# drpm

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE.BSD  Makefile  drpm.c  drpm.h  drpm.pc  drpm.pc.in  drpm.spec  drpm.spec.orig  drpm_compstrm.c  drpm_private.h  drpm_read.c  drpm_utils.c
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/html/: annotated.html  classes.html  drpm_8h.html  drpm_8h_source.html  drpm__private_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  structcompstrm.html  structdrpm.html
doc/html/search/: all_1.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  search.js  typedefs_0.js
doc/latex/: annotated.tex  drpm_8h.tex  files.tex  refman.aux  refman.idx  refman.tex  refman.toc  structcompstrm.tex  structdrpm.tex
pkg/: drpm.spec
src/: CMakeLists.txt  config.h.in  drpm.c  drpm.h  drpm_apply.c  drpm_block.c  drpm_compstrm.c  drpm_decompstrm.c  drpm_deltarpm.c  drpm_diff.c  drpm_make.c  drpm_options.c  drpm_private.h  drpm_read.c  drpm_rpm.c  drpm_search.c  drpm_utils.c  drpm_write.c
test/: CMakeLists.txt  Makefile  cmocka-new.rpm  cmocka-old.rpm  cmocka.supp  drpm-new.rpm  drpm-old.rpm  drpm_api_tests.c  drpm_cmp_files.sh  drpm_test.c  drpm_test_file_1.armv7hl.drpm  drpm_test_file_1.drpm  drpm_test_file_1.i686.drpm  drpm_test_file_1.rpm  drpm_test_file_1.x86_64.drpm  drpm_test_file_2.drpm  drpm_test_file_2.rpm  drpm_test_file_3.rpm  drpm_test_file_4.rpm  lzma.supp  refdrpm-copy.sha256  refseqfile-copy.txt
